--- a/arch/arm64/boot/dts/qcom/dsi-panel-samsung-fhd-ea8076-f1mp-cmd.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-samsung-fhd-ea8076-f1mp-cmd.dtsi
@@ -1,4 +1,5 @@
 /* Copyright (c) 2015, The Linux Foundation. All rights reserved.
+ * Copyright (C) 2021 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -56,6 +57,8 @@
 			17000 15500 30000 8000 3000>;
 		qcom,mdss-dsi-panel-peak-brightness = <4300000>;
 		qcom,mdss-dsi-panel-blackness-level = <3230>;
+		qcom,mdss-dsi-panel-fod-dimlayer-enabled;
+
 		qcom,mdss-dsi-panel-fod-dimlayer-enabled;
 
 		qcom,dispparam-enabled;
