arm64: dts: Switch to `step_wise` thermal governor
- As per some claims, step_wise seems to improve the whole thermal throttling situation hence let's try it out ourselves to see if it improves anything here.

- Inspired by [1].

[1]: https://github.com/Atom-X-Devs/android_kernel_xiaomi_scarlet/commit/2253c9546ba3290cdbd8b6388c998d36591bbf3d

Signed-off-by: Cyber Knight <cyberknight755@gmail.com>
Signed-off-by: onettboots <blackcocopet@gmail.com>

--- a/arch/arm64/boot/dts/qcom/raphael-sm8150.dtsi
+++ b/arch/arm64/boot/dts/qcom/raphael-sm8150.dtsi
@@ -566,7 +566,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	wp_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pm8150b_adc_tm ADC_AMUX_THM1_PU2>;
 		trips {
 			active-config0 {
@@ -580,7 +580,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	xo_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pm8150_adc_tm ADC_XO_THERM_PU2>;
 		trips {
 			active-config0 {
@@ -594,7 +594,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	quiet_therm {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pm8150_adc_tm ADC_AMUX_THM1_PU2>;
 		trips {
 			active-config0 {
@@ -608,7 +608,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	pa_therm0 {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pm8150_adc_tm ADC_AMUX_THM2_PU2>;
 		trips {
 			active-config0 {
@@ -622,7 +622,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	cam_therm0 {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pm8150l_adc_tm ADC_AMUX_THM1_PU2>;
 		trips {
 			active-config0 {
@@ -636,7 +636,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	cam_therm1 {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pm8150l_adc_tm ADC_AMUX_THM2_PU2>;
 		trips {
 			active-config0 {
@@ -650,7 +650,7 @@ And public attribution of xiaomi platforms(like F1 and so and)
 	pa_therm1 {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-governor = "user_space";
+		thermal-governor = "step_wise";
 		thermal-sensors = <&pm8150l_adc_tm ADC_AMUX_THM3_PU2>;
 		trips {
 			active-config0 {
