--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -1020,3 +1020,4 @@ CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
 CONFIG_CAMERA_DISABLE_DUMP_STATE=y
 CONFIG_PELT_COMPATIBILITY_LAYER=y
+CONFIG_TOUCHSCREEN_COMMON=y
