defconfig: Enable BORE Scheduler
Signed-off-by: onettboots <blackcocopet@gmail.com>

--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -977,7 +977,7 @@ CONFIG_IRQ_SBALANCE=y
 CONFIG_SBALANCE_EXCLUDE_CPUS="3,6,7"
 CONFIG_IRQ_SBALANCE_POLL_MSEC=3000
 CONFIG_IRQ_SBALANCE_THRESH=1024
-CONFIG_SCHED_CASS=y
+CONFIG_SCHED_BORE=y
 CONFIG_INIT_STACK_ALL_ZERO=y
 # CONFIG_BOEFFLA_WL_BLOCKER is not set
 # CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY is not set
