--- a/lib/lz4/Makefile
+++ b/lib/lz4/Makefile
@@ -4,3 +4,5 @@ ccflags-y += -O3
 obj-$(CONFIG_LZ4_COMPRESS) += lz4_compress.o
 obj-$(CONFIG_LZ4HC_COMPRESS) += lz4hc_compress.o
 obj-$(CONFIG_LZ4_DECOMPRESS) += lz4_decompress.o
+
+subdir-ccflags-y := $(call cc-disable-warning, unused-function)
