raphael_defconfig: enable audit + avc stats
Signed-off-by: onettboots <blackcocopet@gmail.com>

--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -1,9 +1,9 @@
 CONFIG_LOCALVERSION="-Bool-X-🇮🇩"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_FHANDLE is not set
-# CONFIG_AUDIT is not set
 # CONFIG_AUDITSYSCALL is not set
 CONFIG_CC_WERROR=y
+CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 # CONFIG_IRQ_TIME_ACCOUNTING is not set
