--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -1016,5 +1016,5 @@ CONFIG_VETH=y
 CONFIG_USB_CONFIGFS_F_UVC=y
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
-CONFIG_VETH=y
 CONFIG_CAMERA_DISABLE_DUMP_STATE=y
+# CONFIG_SCHED_DEBUG is not set
