--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -44,7 +44,8 @@ CONFIG_CGROUPS=y
 CONFIG_CGROUP_SCHED=y
 # CONFIG_SCHED_TUNE is not set
 # CONFIG_CPUSET_ASSIST is not set
-CONFIG_DEFAULT_USE_ENERGY_AWARE=y
+CONFIG_UCLAMP_ASSIST=y
+# CONFIG_SCHED_TUNE_DUMMY is not set
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
