--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -41,6 +41,7 @@ CONFIG_CGROUP_SCHED=y
 # CONFIG_RT_GROUP_SCHED is not set
 # CONFIG_CGROUP_WRITEBACK is not set
 # CONFIG_SCHED_TUNE is not set
+CONFIG_UCLAMP_ASSIST=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_BZIP2 is not set
