defconfig: Enable SUSFS
Signed-off-by: onettboots <blackcocopet@gmail.com>

--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -994,6 +994,7 @@ CONFIG_INIT_STACK_ALL_ZERO=y
 # CONFIG_BOEFFLA_WL_BLOCKER is not set
 # CONFIG_MITIGATE_SPECTRE_BRANCH_HISTORY is not set
 CONFIG_KSU=y
+CONFIG_KSU_SUSFS=y
 CONFIG_PROCESS_RECLAIM=y
 CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
