--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -6,7 +6,6 @@ CONFIG_LOCALVERSION="-Bool-X-🇮🇩"
 CONFIG_CC_WERROR=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
-CONFIG_HAVE_MOVE_PMD=y
 CONFIG_SCHED_WALT=y
 # CONFIG_IRQ_TIME_ACCOUNTING is not set
 CONFIG_TASKSTATS=y
@@ -336,9 +335,8 @@ CONFIG_ZRAM=y
 CONFIG_ZRAM_DEF_COMP_LZ4=y
 CONFIG_ZRAM_DEF_COMP="lz4"
 CONFIG_BLK_DEV_LOOP=y
-CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
-CONFIG_BLK_DEV_RAM=y
-CONFIG_BLK_DEV_RAM_SIZE=8192
+CONFIG_BLK_DEV_LOOP_MIN_COUNT=0
+# CONFIG_BLK_DEV_RAM is not set
 CONFIG_TI_DRV8846=y
 CONFIG_HDCP_QSEECOM=y
 CONFIG_QSEECOM=y
@@ -796,10 +794,10 @@ CONFIG_DEVFREQ_SIMPLE_DEV=y
 CONFIG_QCOM_DEVFREQ_DEVBW=y
 CONFIG_DEVFREQ_GOV_CDSPL3=y
 CONFIG_DEVFREQ_BOOST=y
-CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=58
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=28
 CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=500
-CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=9155
-CONFIG_DEVFREQ_MSM_LLCCBW_BOOST_FREQ=5161
+CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=3879
+CONFIG_DEVFREQ_MSM_LLCCBW_BOOST_FREQ=3879
 # CONFIG_EXTCON_USB_GPIO is not set
 CONFIG_IIO=y
 CONFIG_QCOM_SPMI_ADC5=y
